Fix header on mobile.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,9 +23,6 @@
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     font-size: 2em;
 }
-.dropdown {
-    display: inline-block;
-}
 .dropdown-content {
     display: none;
     position: absolute;
